<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F5F4"
    android:orientation="vertical">

    <TextView
        android:id="@+id/labelEnvoi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelEnvoi"
        android:textColor="@color/colorAccent"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/msgToSend"
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:background="#CDF44336"
        android:hint="@string/msgToSend"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/msgToSend"
        android:textSize="14sp" />

    <Button
        android:id="@+id/buttEnvoi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelEnvoi" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelReception"
        android:textColor="@color/colorAccent"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/msgToGet"
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:background="#B74CAF50"
        android:text="@string/msgToGet" />

</LinearLayout>