<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F5F4"
    android:orientation="vertical">

    <TextView
        android:id="@+id/labelEnvoi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelEnvoi"
        android:textColor="@color/colorAccent"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttJSON"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:text="JSON" />

        <Button
            android:id="@+id/buttXML"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="XML" />

    </LinearLayout>

    <TextView
        android:id="@+id/msgToSend"
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:background="#CDF44336"
        android:text="@string/msgToSend" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelReception"
        android:textColor="@color/colorAccent"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/msgToGet"
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:background="#B74CAF50"
        android:text="@string/msgToGet" />

</LinearLayout>