<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F5F4"
    android:orientation="vertical">

    <TextView
        android:id="@+id/labelEnvoi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelEnvoi"
        android:textColor="@color/colorAccent"
        android:textSize="30sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelReception"
        android:textColor="@color/colorAccent"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/msgToGet"
        android:layout_width="match_parent"
        android:layout_height="334dp"
        android:background="#B74CAF50"
        android:fadeScrollbars="false"
        android:text="@string/msgToGet" />

</LinearLayout>