<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:id="@+id/buttAsynchrone"
        android:layout_width="205dp"
        android:layout_height="76dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:text="@string/buttonAsync" />

    <Button
        android:id="@+id/buttDifferee"
        android:layout_width="205dp"
        android:layout_height="76dp"
        android:layout_below="@id/buttAsynchrone"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="99dp"
        android:layout_marginLeft="99dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="107dp"
        android:layout_marginRight="107dp"
        android:text="@string/buttonDiff" />

    <Button
        android:id="@+id/buttComp"
        android:layout_width="205dp"
        android:layout_height="76dp"
        android:layout_below="@+id/buttSeri"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="105dp"
        android:text="@string/buttonComp" />

    <Button
        android:id="@+id/buttGraphQL"
        android:layout_width="205dp"
        android:layout_height="76dp"
        android:layout_below="@+id/buttComp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="101dp"
        android:layout_marginLeft="101dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="104dp"
        android:layout_marginRight="104dp"
        android:text="@string/buttonGraphQL" />

    <Button
        android:id="@+id/buttSeri"
        android:layout_width="205dp"
        android:layout_height="76dp"
        android:layout_below="@+id/buttDifferee"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="98dp"
        android:layout_marginLeft="98dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="107dp"
        android:layout_marginRight="107dp"
        android:text="@string/buttonSeri" />

</RelativeLayout>